--- a/app/globals.css
+++ b/app/globals.css
@@ -29,37 +29,6 @@ section {
   padding-top: 4rem;
 }
 
-.button-link {
-  display: inline-block; /* needed to apply padding */
-  padding: 1rem 2rem;
-  text-decoration: none;
-  border-radius: 1.5rem; /* rounded corners */
-  text-align: center;
-  transition: background-color 0.2s;
-  font-weight: bold;
-  font-size: 0.9rem;
-  min-width: 150px;
-  background-color: white;
-  color: black;
-  box-shadow: inset 0 0 0 1px #000000;
-  height: 48px;
-
-  &:hover {
-    background-color: #d5d5d5;
-  }
-}
-
-.heading {
-  display: flex;
-  align-items: center;
-  padding-bottom: 3rem;
-  justify-content: center;
-}
-
-.heading-with-controls {
-  justify-content: space-between;
-}
-
 button {
   appearance: none;
   background: none;
@@ -75,4 +44,65 @@ button {
     cursor: default;
     pointer-events: none;
   }
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+
+  > * {
+    width: 100%;
+  }
+}
+
+.button {
+  display: inline-block;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  border-radius: 1.5rem;
+  text-align: center;
+  transition: background-color 0.2s;
+  font-weight: bold;
+  font-size: 0.9rem;
+  background-color: white;
+  color: black;
+  box-shadow: inset 0 0 0 1px #000000;
+  height: 48px;
+  width: 180px;
+
+  &:hover {
+    background-color: #d5d5d5;
+  }
+
+  &:disabled {
+    box-shadow: inset 0 0 0 1px #606060;
+  }
+}
+
+.buttonStandalone {
+  margin: 20px auto;
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  padding-bottom: 3rem;
+  justify-content: center;
+}
+
+.heading-with-controls {
+  justify-content: space-between;
+}
+
+.imageWrapper {
+  background-color: #dedede;
+  height: 500px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.image {
+  object-fit: cover;
 }
