--- a/components/banner/banner.module.css
+++ b/components/banner/banner.module.css
@@ -29,7 +29,7 @@
   gap: 1.5rem;
 }
 
-.add {
+& .add {
   background-color: rgba(0, 0, 0, 0.4);
   box-shadow: inset 0 0 0 1px #ffffff;
   color: white;
