--- a/components/products/products.module.css
+++ b/components/products/products.module.css
@@ -33,7 +33,8 @@
   justify-content: space-between;
   font-weight: bold;
   text-transform: uppercase;
-  margin-top: 20px;
+  margin-top: 8px;
+  align-items: center;
 }
 
 .like {
@@ -84,6 +85,9 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-
 }
 
+.productFilter {
+  padding-bottom: 40px;
+  width: 30vw;
+}
